# imu-uart-pipeline

./: .gitignore  README.md  pyproject.toml
scripts/: setup_ports.sh
src/imu_uart/consumer/: __main__.py  history.py  orientation.py  parser.py  uart_io.py
src/imu_uart/emulator/: __main__.py  device.py  imu_source.py
src/imu_uart/protocol/: commands.py  framing.py  models.py
tests/: test_protocol.py  test_serial.py
